ajustes contratos
